Add role-based auth, doctor selection, and improved frontend UI